--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -1,129 +1,144 @@
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
-    <div class="toggle-view">
-        <div class="row mb-1">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header header-bg">
-                        <div class="row">
-                            <div class="col">
-                                <h6 class="m-0 font-weight-bold mt-2">Add Materials Quantity</h6>
+
+    <!-- DataTales Example -->
+   <div class="row">
+        <div class="col-xl-7">
+            <div class="card shadow mb-4 cardbody-size-710">
+                <div class="progress progress-sm mb-2">
+                    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
+                        aria-valuemax="100">
+                    </div>
+                </div>
+                <div class="card-header py-3 header-bg">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <div class="row ">
+                                <h6 class="mt-2 ml-3 font-weight-bold h4 label-title">Materials Inventory</h6>
                             </div>
                         </div>
-                    </div>
-                    <div class="card-body extend">
-                        <div class="row">
-                            <div class="col">
-                                <div class="table-responsive scrollable-table-container-sm table-size-fixed border">
-                                    <table class="table table-bordered custom-mobile-table" id="materials-datatable"
-                                        width="100%" cellspacing="10">
-                                        <thead class="table-header">
-                                            <tr>
-                                                <th class="col-4">Material Name</th>
-                                                <th class="col-1">Material ID</th>
-                                                <th class="col-2">Quantity</th>
-                                                <th class="col-1"></th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td data-label="Material Name" class="custom-mobile-align">
-                                                    <div class="col">
-                                                        <div class="input-group">
-                                                            <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select material" name="material"
-                                                                id="material" />
-                                                            <input autocomplete="off" type="hidden" id="materialID" name="materialID" />
-                                                        </div>
-                                                        <div class="custom-dropdown cdw-tableoption" id="materialDropdown"></div>
-                                                    </div>
-                                                </td>
-                                                <td data-label="Material ID" class="custom-mobile-align material-id"></td>
-                                                <td data-label="Quantity" class="custom-mobile-align">
-                                                    <div class="row justify-content-center">
-                                                        <input autocomplete="off" id="quantity" name="quantity" type="number" class="form-control quantity w-50" placeholder="0.00" value="" maxlength="8">
-                                                    </div>                                                    
-                                                </td>
-                                                <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
-                                            </tr>
-                                        </tbody>
-                                        <tfoot>
-                                        </tfoot>
-                                    </table>
+                        <div class="col-md-6">
+                            <div class="input-group">
+                                <input autocomplete="off" type="text" class="form-control bg-light small" placeholder="Search for..."
+                                    aria-label="Search" aria-describedby="basic-addon2" id="search-input">
+                                <div class="input-group-append">
+                                    <button class="btn sis-btn-color" type="button" id="search-button">
+                                        <i class="fas fa-search fa-sm"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
-    
-                        <div class="row justify-content-end mt-2">
-                            <div class="col-4 text-right">
-                                <button type="button" id="submitBtn" class="btn btn-outline-inventory w-50">Update</button>
+                        <div class="col-1">
+                            <div class="row d-flex justify-content-center">
+                                <button class="btn btn-outline-inventory ml-2" id="convertopdf">
+                                    <i class="fas fa-download fa-sm"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- DataTales Example -->
-    <div class="card shadow mb-4 cardbody-size-710">
-        <div class="progress progress-sm mb-2">
-            <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
-                aria-valuemax="100">
-            </div>
-        </div>
-        <div class="card-header py-3 header-bg">
-            <div class="row">
-                <div class="col-md-5">
-                    <div class="row mb-2">
-                        <button id="toggleButton" name="toggleButton"
-                            class=" ml-3 btn btn-circle btn-outline-inventory ">
-                            <i class="fas fa-chevron-right"></i>
-                        </button>
-                        <h6 class="mt-2 ml-3 font-weight-bold table-title">Material Counts</h6>
+                <div class="card-body">
+                    <div class="table-responsive scroll-cardbody-size-710 border">
+                        <table class="table table-bordered custom-mobile-table" id="materialcount-dataTable" width="100%"
+                            cellspacing="10">
+                            <thead class="table-header">
+                                <tr>
+                                    <th class="text-left">ID</th>
+                                    <th class="text-left">Material Name</th>
+                                    <th class="text-left">Stocks</th>
+                                    <th class="text-left">Created By</th>
+                                    <th class="text-left">Created Date</th>
+                                    <th class="col-1">Status</th>
+                                    <th class="col-1"></th>
+                                </tr>
+                            </thead>
+        
+                            <tbody>
+                            </tbody>
+                        </table>
                     </div>
+        
                 </div>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <input autocomplete="off" type="text" class="form-control bg-light small" placeholder="Search for..."
-                            aria-label="Search" aria-describedby="basic-addon2" id="search-input">
-                        <div class="input-group-append">
-                            <button class="btn sis-btn-color" type="button" id="search-button">
-                                <i class="fas fa-search fa-sm"></i>
-                            </button>
+            </div>
+        </div>
+        <div class="col-xl-5">
+            <div class="card shadow cardbody-size-710">
+                <div class="card-header header-bg">
+                    <div class="row">
+                        <div class="col">
+                            <h6 class="m-0 font-weight-bold mt-2 label-title h4">Add Materials</h6>
                         </div>
                     </div>
                 </div>
-                <div class="col-1">
-                    <div class="row d-flex justify-content-center">
-                        <button class="btn btn-outline-inventory ml-2" id="convertopdf">
-                            <i class="fas fa-download fa-sm"></i>
-                        </button>
+                <div class="card-body extend ">
+                    <div class="row">
+                        <div class="col">
+                            <div class="table-responsive scroll-cardbody-size-710 border">
+                                <table class="table table-bordered custom-mobile-table" id="materials-datatable"
+                                    width="100%" cellspacing="10">
+                                    <thead class="table-header">
+                                        <tr>
+                                            <th class="col-3 text-left">Material Name</th>
+                                            <th class="col-1 text-left">Material ID</th>
+                                            <th class="col-2 text-left">Quantity</th>
+                                            <th class="col-2 text-left">Unit</th>
+                                            <th class="col-1"></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td data-label="Material Name" class="custom-mobile-align">
+                                                <div class="col">
+                                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select material" name="material" id="material" />
+                                                    <input autocomplete="off" type="hidden" id="materialID" name="materialID" />
+                                                    <div class="custom-dropdown cdw-tableoption" id="materialDropdown"></div>
+                                                </div>
+                                            </td>
+                                            <td data-label="Material ID" class="custom-mobile-align material-id"></td>
+                                            <td data-label="Quantity" class="custom-mobile-align">
+                                                <div class="row justify-content-center">
+                                                    <input autocomplete="off" id="quantity" name="quantity" type="number" class="form-control quantity w-50" placeholder="0.00" value="" maxlength="8">
+                                                </div>                                                    
+                                            </td>
+                                            <td data-label="Unit" class="custom-mobile-align">
+                                                <div class="row justify-content-center">
+                                                    <div class="col">
+                                                        <select class="form-control w-100" name="unitdeduct" id="unitdeduct0">
+                                                            <option value="">Select Unit</option>
+                                                            <option value="kg">Kilogram</option>
+                                                            <option value="oz">Ounce</option>
+                                                            <option value="g">Gram</option>
+                                                            <option value="mg">Milligram</option>
+                                                            <option value="mcg">Microgram</option>
+                                                            <option value="lb">Pound</option>
+                                                            <option value="mt">Metric Ton</option>
+                                                            <option value="t">Tonne</option>
+                                                            <option value="ml">Milliliter</option>
+                                                            <option value="l">Liter</option>
+                                                            <option value="kl">Kiloliter</option>
+                                                            <option value="gal">Galon</option>
+                                                            <option value="pc">Piece</option>
+                                                        </select>
+                                                    </div>
+                                                </div>                                                    
+                                            </td>
+                                            <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
+                                        </tr>
+                                    </tbody>
+                                    <tfoot>
+                                    </tfoot>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row justify-content-end mt-2">
+                        <div class="col-4 text-right">
+                            <button type="button" id="submitBtn" class="btn btn-outline-inventory w-100">ADD</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-710 border">
-                <table class="table table-bordered custom-mobile-table" id="materialcount-dataTable" width="100%"
-                    cellspacing="10">
-                    <thead class="table-header">
-                        <tr>
-                            <th>Count ID</th>
-                            <th>Material Name</th>
-                            <th>Quantity</th>
-                            <th>Unit</th>
-                            <th>Created By</th>
-                            <th>Created Date</th>
-                            <th class="col-1">Status</th>
-                            <th class="col-1"></th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-
-        </div>
-    </div>
+   </div>
