--- a/views/productionhistory/productionhistory.ejs
+++ b/views/productionhistory/productionhistory.ejs
@@ -44,6 +44,8 @@
                             <th>ID</th>
                             <th>Production ID</th>
                             <th>Quantity</th>
+                            <th>Product</th>
+                            <th>Supervisor</th>
                         </tr>
                     </thead>
                     <tbody>
