--- a/views/stockadjustment/stockadjustmentscripts.ejs
+++ b/views/stockadjustment/stockadjustmentscripts.ejs
@@ -250,7 +250,8 @@
                 { text: "Damage", data: "damage" },
                 { text: "Loss", data: "loss" },
                 { text: "Supplier Return", data: "supplier return" },
-                { text: "Customer Return", data: "customer return" }
+                { text: "Customer Return", data: "customer return" },
+                { text: "Wrong Entry", data: "wrong entry" }
             ];
 
             const adjustment_Type = [
