--- a/views/productioncomponents/productioncomponentsscripts.ejs
+++ b/views/productioncomponents/productioncomponentsscripts.ejs
@@ -994,187 +994,126 @@
             switch (`${unit}:${unitdeduct}`) {
                 case 'kg:mcg':
                     return ratio = 1 / 1e9;
-                    break;
                 case 'kg:mg':
                     return ratio = 1 / 1e6;
-                    break;
                 case 'kg:g':
                     return ratio = 1 / 1000;
-                    break;
                 case 'kg:oz':
                     return ratio = 1 / 35.274;
-                    break;
                 case 'kg:lb':
                     return ratio = 1 / 2.20462;
-                    break;
                 case 'kg:mt':
                     return ratio = 1 / 0.001;
-                    break;
                 case 'kg:t':
                     return ratio = 1 / 0.001;
-                    break;
                 case 'kg:l':
                     return ratio = 1;
-                    break;
                 case 'kg:ml':
-                    return ratio = 1 * 1000;
-                    break;
+                    return ratio = 1 / 1000;
                 case 'kg:kl':
                     return ratio = 1 / 0.001;
-                    break;
                 case 'kg:gal':
                     return ratio = 1 / 0.264172;
-                    break;
                 case 'g:mcg':
                     return ratio = 1 / 1000;
-                    break;
                 case 'g:mg':
                     return ratio = 1 / 1000;
-                    break;
                 case 'g:kg':
                     return ratio = 1000;
-                    break;
                 case 'g:oz':
                     return ratio = 1 / 0.035274;
-                    break;
                 case 'g:lb':
                     return ratio = 1 / 0.00220462;
-                    break;
                 case 'g:mt':
                     return ratio = 1 / 1e-6;
-                    break;
                 case 'g:t':
                     return ratio = 1 / 1e-6;
-                    break;
                 case 'g:l':
                     return ratio = 1 / 1000;
-                    break;
                 case 'g:ml':
                     return ratio = 1;
-                    break;
                 case 'g:kl':
                     return ratio = 1 / 1e-6;
-                    break;
                 case 'g:gal':
                     return ratio = 1 / 264.172;
-                    break;
                 case 'mg:mcg':
                     return ratio = 1 / 1000;
-                    break;
                 case 'mg:g':
                     return ratio = 1000;
-                    break;
                 case 'mg:kg':
                     return ratio = 1e6;
-                    break;
                 case 'mg:oz':
                     return ratio = 1 / 0.000035274;
-                    break;
                 case 'mg:lb':
                     return ratio = 1 / 0.00000220462;
-                    break;
                 case 'mg:mt':
                     return ratio = 1 / 1e-9;
-                    break;
                 case 'mg:t':
                     return ratio = 1 / 1e-9;
-                    break;
                 case 'mg:l':
                     return ratio = 1e6;
-                    break;
                 case 'mg:ml':
                     return ratio = 1000;
-                    break;
                 case 'mg:kl':
                     return ratio = 1 / 1e-9;
-                    break;
                 case 'mg:gal':
                     return ratio = 1 / 3.78541e-6;
-                    break;
                 case 'mcg:mg':
                     return ratio = 1000;
-                    break;
                 case 'mcg:g':
                     return ratio = 1e6;
-                    break;
                 case 'mcg:kg':
                     return ratio = 1e9;
-                    break;
                 case 'mcg:oz':
                     return ratio = 1 / 3.5274e-8;
-                    break;
                 case 'mcg:lb':
                     return ratio = 1 / 2.2046e-9;
-                    break;
                 case 'mcg:mt':
                     return ratio = 1 / 1e-12;
-                    break;
                 case 'mcg:t':
                     return ratio = 1 / 1e-12;
-                    break;
                 case 'mcg:l':
                     return ratio = 1e9;
-                    break;
                 case 'mcg:ml':
                     return ratio = 1e6;
-                    break;
                 case 'mcg:kl':
                     return ratio = 1e12;
-                    break;
                 case 'mcg:gal':
                     return ratio = 1 / 3.78541e-9;
-                    break;
                 case 'l:ml':
                     return ratio = 1 / 1000;
-                    break;
                 case 'l:kl':
                     return ratio = 1 / 0.001;
-                    break;
                 case 'l:gal':
                     return ratio = 1 / 0.264172;
-                    break;
                 case 'l:kg':
                     return ratio = 1;
-                    break;
                 case 'ml:l':
                     return ratio = 1000;
-                    break;
                 case 'ml:kl':
                     return ratio = 1e6;
-                    break;
                 case 'ml:gal':
                     return ratio = 1 / 0.000264172;
-                    break;
                 case 'ml:kg':
                     return ratio = 1000;
-                    break;
                 case 'kl:l':
                     return ratio = 1 / 1000;
-                    break;
                 case 'kl:ml':
                     return ratio = 1 / 1e6;
-                    break;
                 case 'kl:gal':
                     return ratio = 1 / 264.172;
-                    break;
                 case 'kl:kg':
                     return ratio = 1 / 1000;
-                    break;
                 case 'gal:l':
                     return ratio = 0.264172;
-                    break;
                 case 'gal:ml':
                     return ratio = 1 / 0.000264172;
-                    break;
                 case 'gal:kl':
                     return ratio = 264.172;
-                    break;
                 case 'gal:kg':
                     return ratio = 0.264172;
-                    break;
                 default:
                     return ratio;
-                    break;
             }
         }
         //#endregion
