--- a/views/productionmaterials/productionmaterialsscripts.ejs
+++ b/views/productionmaterials/productionmaterialsscripts.ejs
@@ -289,7 +289,7 @@
                 { unit: "Galon  (gal)", id: "gal" }, 
                 
                 //Individual
-                // { unit: "Piece (pc)", id: "pc" }
+                { unit: "Piece (pc)", id: "pc" }
             ];
 
             const activeData = [];
