Bug fix on components

--- a/views/productioncomponents/productioncomponentsscripts.ejs
+++ b/views/productioncomponents/productioncomponentsscripts.ejs
@@ -22,7 +22,6 @@
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
-                <td><div class="custom-loader"></div></td>
             </tr>`;
 
         const tbody = $('#productioncomponents-datatable tbody');
@@ -95,7 +94,7 @@
                                 $('<td>', { text: item.componentid, 'data-label': 'Employee ID', class: 'custom-mobile-align text-left' }),
                                 $('<td>', { text: productdescription, 'data-label': 'product Name', class: 'custom-mobile-align text-left' }),
                                 $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align text-left' }),
-                                $('<td>', { html: refinedcomponents, 'data-label': 'Components', class: 'custom-mobile-align text-left' }),
+                                // $('<td>', { html: refinedcomponents, 'data-label': 'Components', class: 'custom-mobile-align text-left' }),
                                 $('<td>', { text: item.createdby.toUpperCase(), 'data-label': 'Created By', class: 'custom-mobile-align text-left' }),
                                 $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align text-left' }),
                                 $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
@@ -331,6 +330,7 @@
                         },
                         success: function (result) {
                             let data = result.data;
+                            // console.log(data, "Materials")
                             const unitDeductionInput = `
                                 <select class="form-control" name="unitDeduct" id="modalUnitDeduct${modalCounter}">
                                     <option value="kg">Kilogram</option>
@@ -352,7 +352,7 @@
                             tableBody.appendChild(tr);
                             tr.innerHTML = `
                                     <td class="custom-mobile-align" data-label="Material Name">
-                                        <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Material" value="${item.materialname}" name="materialEdit" id="oldMaterial${modalCounter}" disabled/>
+                                        <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Material" value="${data[0].materialname}" name="materialEdit" id="oldMaterial${modalCounter}" disabled/>
                                     </td>
                                     <td data-label="Material ID" class="custom-mobile-align material-id materialid">${item.materialid}</td>
                                     <td class="custom-mobile-align" data-label="Price/Unit">${formatCurrency(data[0].price)}</td>
